testsuite/tests/partial-sigs/should_fail/WildcardInGADT1.hs
{-# LANGUAGE PartialTypeSignatures, GADTs #-}
module WildcardInGADT1 where

data Foo a where
  Foo :: Either a _ -> Foo a
