testsuite/tests/partial-sigs/should_fail/WildcardInGADT1.stderr

WildcardInGADT1.hs:5:19: error: [GHC-65507]
    • Wildcard ‘_’ not allowed
    • In the definition of data constructor ‘Foo’
